# ospt

./: README.rst  requirements.txt  setup.cfg  setup.py
helper/: ospt_attach_detach.sh  ospt_create.sh
ospt/: cli.py  control.py  exceptions.py  flow.py  utils.py
ospt/commands/: __init__.py  base.py  host_access.py  servers.py  volumes.py
