[metadata]
name = ospt

author = Ryan Liang
author-email = menglei.leung@gmail.com
maintainer = Ryan Liang
maintainer-email = menglei.leung@gmail.com
summary = Dell EMC OpenStack Performance Test Utility
description-file = README.rst
home-page = https://github.com/murray-liang/ospt
license = BSD
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    Dell
    EMC
    OpenStack

[files]
packages =
    ospt

[entry_points]
console_scripts=
    ospt = ospt.cli:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[bdist_wheel]
universal = 1
